<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/startgameButton"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/startgame" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/difficultyeasy"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/difficultyeasy" />

            <RadioButton
                android:id="@+id/difficultymedium"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/difficultymedium" />

            <RadioButton
                android:id="@+id/difficultyhard"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/difficultyhard" />
        </RadioGroup>

        <Spinner
            android:id="@+id/minedensity"
            android:prompt="@string/minedensityprompt"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
            <!-- Preview: listitem=@android:layout/simple_spinner_item -->
        </Spinner>

        <Button
            android:id="@+id/exitgameButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/exitgame" />
    </LinearLayout>

    <ImageView
        android:id="@+id/splashimage"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/imageaccess"
        android:src="@drawable/splash" />

</LinearLayout>